# sunlight-kernel

./: .gitignore  .version_state.json  AGENTS.md  Cargo.toml  FINAL_SESSION_SUMMARY.md  FREEZE_DIAGNOSIS_COMPLETE.md  MEMORY_LEAK_HYPOTHESIS_TEST.md  PHASE5_CURRENT_STATE.md  PHASE6_IMPLEMENTATION.md  PHASE6_QUICKSTART.md  PHASE6_SUMMARY.txt  PHASE_2_DELIVERY_SUMMARY.md  PHASE_3_BORE_SCHEDULER_READY.md  PHASE_5.8_COMPLETION.txt  README.md  ROOT_CAUSE_FOUND.md  TERMINAL_CHANGES_ANALYSIS.md  TTY_DEMO_OUTPUT.txt  count-lines.sh  limine.cfg  limine.conf  test_leak_diagnostics.sh  test_memory_stress.sh
.cargo/: config.toml
compat-linux/: Cargo.toml
compat-linux/src/: lib.rs
docs/: ACPI_IMPLEMENTATION.md  AUTHENTICATION_IMPLEMENTATION.md  COMPLETE_HARDCODED_FIXES.md  DIAGNOSTIC_IMPLEMENTATION_SUMMARY.md  DIAGNOSTIC_TRACING_REPORT.md  DNS_RESOLVER_PHASE3_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FINAL_SUMMARY.md  FIX_COMPLETE_SUMMARY.md  FOREGROUND_INPUT_ROUTING.md  HARDCODED_USER_FIX_SUMMARY.md  PASSWD_IMPLEMENTATION.md  PHASE5_STORAGE_ARCHITECTURE.md  PHASE6_5_STEP2_ENV_PATH.md  PHASE6_5_STEP3_NEXT_SESSION.md  PHASE6_5_STEP3_VFS_ELF.md  PHASE6_5_USERLAND_EXPECTATIONS.md  PHASE6_5_USERLAND_PLAN.md  PHASE6_INSTALLER_STRUCTURE.md  PHASE6_NICE_PRIORITY_PLAN.md  PHASE_2.5_SUMMARY.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_2_QUICK_START.md  PHASE_2_TIMED_ARCHITECTURE.md  PHASE_3_0_SUMMARY.md  PHASE_3_5_SUMMARY.md  PHASE_3_6_SUMMARY.md  PHASE_3_7_SUMMARY.md  PHASE_3_8_SUMMARY.md  PHASE_3_9_SUMMARY.md  PHASE_3_ARCHITECTURE_OVERVIEW.md  PHASE_3_BORE_SCHEDULER_DESIGN.md  PHASE_3_CURRENT_SCHEDULER_ANALYSIS.md  PHASE_3_IMPLEMENTATION_CHECKLIST.md  PHASE_3_NEXT_SESSION_PROMPT.md  PHASE_3_ROADMAP.md  PHASE_4_5_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5.8_SUMMARY.md  PHASE_510_USER_MANAGEMENT_COMPLETE.md  (+34 more)
drivers/: Cargo.toml
drivers/src/: lib.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: main.rs  panic.rs  telemetry.rs
kernel/src/arch/x86_64/: acpi.rs  boot.rs  interrupts.rs  keyboard.rs  linker.ld  mod.rs  rtc.rs  serial.rs  syscall.rs  userspace.rs
kernel/src/capability/: mod.rs
kernel/src/ipc/: message.rs  mod.rs
kernel/src/memory/: heap.rs  mod.rs  pmm.rs  shared.rs  swap.rs  validate.rs  vmm.rs  zram.rs
kernel/src/process/: address_space.rs  elf_loader.rs  env.rs  fd_table.rs  fork.rs  layout.rs  mmap.rs  mod.rs  pipe.rs  signal.rs  spawn.rs  tty_io.rs
kernel/src/sched/: context.rs  mod.rs  thread.rs
services/: user-space.ld
services/init/: Cargo.toml
services/init/src/: main.rs
services/install_sunlightos/: Cargo.toml
services/install_sunlightos/src/: main.rs
services/net_server/: Cargo.toml
services/net_server/src/: main.rs
services/sunlightctl/: Cargo.toml
services/sunlightctl/.cargo/: config.toml
services/sunlightctl/src/: main.rs
services/sunlightd/: Cargo.toml
services/sunlightd/src/: graph.rs  ipc.rs  journal.rs  main.rs  socket_act.rs  supervisor.rs  unit.rs
services/timed/: Cargo.toml
services/timed/src/: config.rs  localtime.rs  main.rs  ntp.rs  state.rs
services/timer_server/: Cargo.toml
services/timer_server/.cargo/: config.toml
services/timer_server/src/: main.rs
services/timezone_service/: Cargo.toml
services/timezone_service/src/: main.rs
services/tty_server/: Cargo.toml
services/tty_server/src/: main.rs
services/vfs_server/: Cargo.toml
services/vfs_server/src/: main.rs
sunlight-block/: Cargo.toml
sunlight-block/src/: lib.rs
sunlight-elf/: Cargo.toml
sunlight-elf/src/: lib.rs
sunlight-fat/: Cargo.toml
sunlight-fat/src/: fat.rs  lib.rs  share.rs  testimg.rs
sunlight-fetch/: Cargo.toml  README.md
sunlight-fetch/src/: cli.rs  downloader.rs  error.rs  http.rs  ipc.rs  lib.rs  main.rs  progress.rs
sunlight-fs/: Cargo.toml
sunlight-fs/etc/: group  groups.json  hosts  passwd  shadow  users.json
sunlight-fs/src/: block.rs  error.rs  fstab.rs  lib.rs  passwd.rs  path.rs  permission.rs  ramfs.rs  vfs.rs
sunlight-libc/: Cargo.toml
sunlight-libc/src/: lib.rs  sys.rs
sunlight-net/: Cargo.toml
sunlight-net-utils/: Cargo.toml
sunlight-net-utils/src/: main.rs
sunlight-net/src/: device.rs  dhcp.rs  dns.rs  hosts.rs  icmp.rs  lib.rs  netop.rs  pci.rs  proxy_device.rs  simulation.rs  tcp.rs  virtio_net.rs
sunlight-net/src/dns/: cache.rs  mod.rs  upstream.rs  wire.rs
sunlight-top/: Cargo.toml
sunlight-top/src/: main.rs  telemetry.rs  terminal.rs
sunlight-top/src/ui/: header.rs  mod.rs  table.rs
sunlight-tty/: Cargo.toml
sunlight-tty/src/: console.rs  grid.rs  lib.rs  login.rs  mux.rs  session.rs  shell.rs  vt100.rs
sunlight-tui/: Cargo.toml
sunlight-tui/src/: draw.rs  fmt.rs  font.rs  font8x16.bin.sh  framebuffer.rs  layout.rs  lib.rs  splash.rs  trig_tables.txt
sunlight-tui/src/modes/: debug.rs  mod.rs  silent.rs
sunlight-tz/: Cargo.toml  build.rs
sunlight-tz/src/: config.rs  csv.rs  lib.rs  localtime.rs  offset.rs
sunlight-utils/: Cargo.toml
sunlight-utils/src/: main.rs
sunlight-virtio/: Cargo.toml
sunlight-virtio/src/: blk.rs  lib.rs  pci.rs
sunshell/: Cargo.toml
sunshell/.cargo/: config.toml
sunshell/src/: builtins.rs  exec.rs  input.rs  main.rs  parser.rs  shellenv.rs  sysfetch.rs
tools/: build.sh  disk.sh  install_sunlightos.sh  run-gui.sh  run-screenshot.sh  run-simple.sh  run-vnc.sh  run.sh  test.sh  version_manager.py
tools/tests/: README.md  dns_hosts.expected  phase2_6.expected  phase3_0.expected  phase3_5.expected  phase3_6.expected  phase3_7.expected  phase3_8.expected  phase3_9.expected  phase4_5.expected  phase5_0.expected  phase5_1.expected  phase5_2.expected  phase5_3.expected  phase5_4.expected  phase5_5.expected  phase5_6.expected  phase5_7.expected  phase5x_0.expected  phase5x_1.expected  phase5x_2.expected  phase5x_3.expected  phase5x_4.expected  phase5x_5.expected  phase5x_6.expected  phase6_5_1.expected  phase6_5_3.expected  phase_sec.expected  phase_shm.expected  sunlightd.expected  top.expected
tools/tests/injections/: README.md
