[workspace]
resolver = "2"
members = [
    "kernel",
    "ipc",
    "drivers",
    "compat-linux",
    "sunlight-top",
    "services/init",
    "services/timer_server",
    "services/timed",
    "services/vfs_server",
    "services/net_server",
    "services/sunlightd",
    "services/sunlightctl",
    "sunlight-tui",
    "sunlight-tz",
    "sunlight-block",
    "sunlight-fs",
    "sunlight-virtio",
    "sunlight-fat",
    "sunlight-libc",
    "sunlight-tty",
    "services/tty_server",
    "services/timezone_service",
    "sunlight-elf",
    "sunshell",
    "sunlight-net",
    "sunlight-utils",
    "sunlight-net-utils",
]

[workspace.dependencies]
# shared versions across all crates

[profile.dev]
panic = "abort"
opt-level = 1        # some optimization needed even in dev for correctness

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
