[package]
name = "sunlight-kernel"
version = "0.1.8"



edition = "2021"

[[bin]]
name = "sunlight-kernel"
path = "src/main.rs"

[dependencies]
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
uart_16550 = "0.3"
limine = "0.6"
spin = "0.9"
linked_list_allocator = "0.10"
sunlight-tui = { path = "../sunlight-tui" }
sunlight-virtio = { path = "../sunlight-virtio" }
sunlight-block = { path = "../sunlight-block" }
sunlight-fat = { path = "../sunlight-fat" }
sunlight-elf = { path = "../sunlight-elf" }
sunlight-fs = { path = "../sunlight-fs" }
sunlight-compat-linux = { path = "../compat-linux" }
sunlight-net = { path = "../sunlight-net" }
lz4_flex = { version = "0.11", default-features = false }

[features]
key_inject = []
