[package]
name    = "sunshell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sshl"
path = "src/main.rs"

[dependencies]
sunlight-ipc = { path = "../ipc", optional = true }
sunlight-libc = { path = "../sunlight-libc", optional = true }

[features]
default = ["sunlight"]
std = []
sunlight = ["sunlight-ipc", "sunlight-libc"]

[profile.release]
panic         = "abort"
opt-level     = "z"
lto           = true
strip         = true
codegen-units = 1
