[package]
name    = "sunshell"
version = "0.1.6"

edition = "2021"

[[bin]]
name = "sshl"
path = "src/main.rs"

[dependencies]
sunlight-ipc = { path = "../ipc", optional = true }
sunlight-libc = { path = "../sunlight-libc", optional = true }
sunlight-tz = { path = "../sunlight-tz" }

[features]
default = ["sunlight"]
std = []
sunlight = ["sunlight-ipc", "sunlight-libc"]

[profile.release]
panic         = "abort"
opt-level     = "z"
lto           = true
strip         = true
codegen-units = 1
