[package]
name = "sunlight-init"
version = "0.1.7"


edition = "2021"

[[bin]]
name = "sunlight-init"
path = "src/main.rs"

[dependencies]
sunlight-ipc = { path = "../../ipc" }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
