[package]
name = "install_sunlightos"
version = "0.1.8"



edition = "2021"

[[bin]]
name = "install_sunlightos"
path = "src/main.rs"

[dependencies]
sunlight-ipc = { path = "../../ipc" }
sunlight-fs = { path = "../../sunlight-fs" }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
