[package]
name = "sunlight-timer-server"
version = "0.1.7"


edition = "2021"

[[bin]]
name = "sunlight-timer-server"
path = "src/main.rs"

[dependencies]
sunlight-ipc = { path = "../../ipc" }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
