[build]
target = "x86_64-unknown-none"

[target.x86_64-unknown-none]
rustflags = [
    "-C", "link-arg=-T../../user-space.ld",
    "-C", "relocation-model=static",
]

[package]
name = "sunlight-tty-server"
version = "0.1.6"

edition = "2021"

[[bin]]
name = "sunlight-tty-server"
path = "src/main.rs"

[dependencies]
sunlight-ipc = { path = "../../ipc" }
sunlight-fs  = { path = "../../sunlight-fs" }
sunlight-tty = { path = "../../sunlight-tty" }
sunlight-tui = { path = "../../sunlight-tui" }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
